<resources>
    <string name="app_name">清水河畔</string>
    <string name="user_name">用户名</string>
    <string name="user_psw">密码</string>
    <string name="login_text">登录</string>
    <string name="add_account_text">添加帐号</string>
    <string name="register_text">注册</string>
    <string name="login_error">登录失败：%1$s</string>
    <string name="login_welcome">欢迎回来：%1$s</string>
    <string name="login_btn_text">登录</string>
    <string name="login_answer">安全提问答案</string>
    <string name="daily_pic">每日一图</string>
    <string name="hot_post">近期热点</string>
    <string name="new_post">最新发布</string>
    <string name="home_page_title">清水河畔</string>
    <string name="forum_list_title">板块列表</string>
    <string name="notification_title">消息通知</string>
    <string name="mine_title">我的</string>
    <string name="my_post_title">我的发表（%1$d）</string>
    <string name="my_favorite_title">我的收藏（%1$d）</string>
    <string name="my_reply_title">我的回复（%1$d）</string>
    <string name="system_msg_title">系统通知</string>
    <string name="at_msg_title">提到我的</string>
    <string name="reply_msg_title">回复我的</string>
    <string name="private_msg_title">私信</string>
    <string name="medal_center">勋章中心</string>
    <string name="magic_shop">道具商店</string>
    <string name="mine_magic">我的道具</string>
    <string name="task_center">水滴小任务</string>
    <string name="reply_time">%1$s%2$s前有回复</string>
    <string name="post_time">%1$s%2$s前发表</string>
    <string name="post_time1">%1$s%2$s前</string>
    <string name="no_reply_hint">还没有评论</string>
    <string name="reply_floor">#%1$d</string>
    <string name="edit_info">%1$s在%2$s编辑了此帖</string>
    <string name="quote_content">%1$s（%2$s）：\n%3$s</string>
    <string name="reply_text">回复</string>
    <string name="support_text_none">支持</string>
    <string name="support_text">支持(%1$d)</string>
    <string name="click_to_view_long_pic">（点击浏览长图）</string>
    <string name="today_posts">今日发帖：%1$d</string>
    <string name="board_error_500">由于接口问题，该板块无法访问，请浏览Web页面</string>
    <string name="permission_request">"授予该权限才能进行下一步操作，请重新授予该权限</string>
    <string name="permission_refuse">获取权限失败，请转至软件权限设置页面授予该权限</string>
    <string name="request_error">请求失败，请检查网络是否已连接</string>
    <string name="black_list_desp">加入到黑名单的用户，将会从您的好友列表中删除。同时，对方将不能进行与您相关的打招呼、踩日志、加好友、评论、留言、短消息等互动行为。\n\n由于河畔黑名单机制并没有屏蔽用户帖子，因此在您将该用户加入黑名单时，客户端会同时屏蔽该用户的所有帖子（主题、评论和点评等，搜索功能暂不屏蔽以便您检阅相关信息）。该功能为本地附加功能，重装软件需要重新加入黑名单才生效，并且该功能只在本客户端有效。\n\n您是否要将该用户加入黑名单并且屏蔽所有帖子？</string>
    <string name="black_list_desp1">此处展示了您的河畔帐号黑名单用户，本客户端除了提供河畔拉黑机制外，还对拉黑用户的所有帖子（主题、评论和点评等，搜索功能暂不屏蔽以便您检阅相关信息）做了屏蔽处理，但是本功能相关数据只保存在本地，因此卸载重装软件或者在网页端拉黑用户后需要在客户端重新拉黑才能使用本功能。</string>
    <string name="local_black_list_desp">这里展示了本地黑名单数据，表示您在本客户端屏蔽了该黑名单列表的用户，一般情况下您可以忽略此黑名单。\n但是当您在网页端取消拉黑某用户时，该用户可能依然存在于本地数据库中，因此您需要删除该用户才能在本客户端取消屏蔽该用户帖子。</string>
    <string name="get_upload_hash_dsp">上传附件需要hash参数值，该参数对于每个用户来说是唯一并且固定的，获取参数前请确保已经登录并且已经高级授权。</string>
    <string name="last_login_time">%1$s%2$s前活跃</string>
    <string name="comment_word_count">字数：%1$d | 图片：%2$d</string>
    <string name="view_count">阅读%1$d</string>
    <string name="comment_count">评论%1$d</string>
    <string name="icon_url">https://bbs.uestc.edu.cn/uc_server/avatar.php?uid=%1$d&amp;size=middle</string>
    <string name="no_new_message">无未读消息</string>
    <string name="click_to_view">点击查看</string>
    <string name="new_at_message">%1$d条未读at消息</string>
    <string name="new_reply_message">%1$d条未读回复</string>
    <string name="new_private_message">%1$d条未读私信</string>
    <string name="total_voters">共%1$d人参与投票</string>
    <string name="can_vote">您可参与投票，最多可选%1$d项</string>
    <string name="is_voted">您已投过票，感谢您的参与！</string>
    <string name="no_vote_permission">抱歉，您没有权限投票</string>
    <string name="vote_closed">抱歉，投票已经结束</string>
    <string name="vote_item_voted_num">%1$s（%2$d人，%3$s）</string>
    <string name="rate_desp">1、负值表示扣除对方水滴。同时也会扣除你的相应水滴，并且额外收取10%的手续费，不足1水滴按1水滴计算\n2、正值表示增加对方水滴。同时也会扣除你的相应水滴，不额外收取手续费</string>
    <string name="dian_ping_desp">注：点评不支持被回复、点赞、编辑及删除等操作</string>
    <string name="append_desp">注：客户端显示补充内容会有几分钟的延迟，在此期间请从网页端查看补充内容</string>
    <string name="super_login_dsp">温馨提示：高级授权会先获取Cookies，然后利用此Cookies获取上传附件所需的Hash参数值</string>
    <string name="credit_transfer_dsp">转账说明：\n1、由于河畔转账bug，转账时可能会扣除您的双倍水滴，所以转账时建议输入要转账水滴数的一半。例如你要转账10水滴给sca_tl，请输入5而不是10。\n2、请输入对方的用户名进行转账，为了保证转账的准确性，请直接复制粘贴对方用户名。\n3、转账后最低余额0水滴，积分（您的水滴）交易税35%，即转账100水滴，对方只能收到65水滴。</string>
    <string name="magic_shop_dsp">目前只有刮刮卡和悔悟卡可以在本客户端内使用，刮刮卡可以随机获取水滴，购买后请点击右上角进入我的勋章使用；河畔规定只能使用悔悟卡删除帖子，删除回复请长按回复使用，删除主题请点击主题详情页的右上角更多选项使用。</string>
    <string name="board_info">今日发帖：%1$d</string>
    <string name="share_title">分享帖子：%1$s</string>
    <string name="share_content">《%1$s》%2$s（下载客户端了解更多内容：https://wwa.lanzous.com/b09x9hlpa）</string>
    <string name="home_style">home_style</string>
    <string name="home_style_title">首页样式</string>
    <string name="home_style_summary">更改首页为分类样式或者综合样式</string>
    <string name="auto_load_more">auto_load_more</string>
    <string name="auto_load_more_title">自动加载</string>
    <string name="auto_load_more_summary">打开此功能以便在浏览帖子列表、评论时自动加载数据</string>
    <string name="clean_cache_before_load">clean_cache_before_load</string>
    <string name="clean_cache_before_load_title">加载数据前清除服务器缓存</string>
    <string name="clean_cache_before_load_summary">由于服务器缓存，您不能实时获取最新回复以及最新发表数据，打开此开关，您在刷新最新发表数据之前会清除服务器缓存，这样您就可以获取到最新的数据。但这样会造成加载时间更长甚至连接超时并且还会给服务器造成压力，请酌情使用该功能。</string>
    <string name="answer_day_question_background">answer_day_question_background</string>
    <string name="answer_day_question_background_title">自动获取答案</string>
    <string name="answer_day_question_background_summary">开启后，每日答题自动获取答案</string>
    <string name="auto_answer_day_question">auto_answer_day_question</string>
    <string name="auto_answer_day_question_title">后台自动答题</string>
    <string name="auto_answer_day_question_summary">开启后，进入APP后台自动答题</string>
    <string name="open_link_by_internal_browser">open_link_by_internal_browser</string>
    <string name="open_link_by_internal_browser_title">内置浏览器打开链接</string>
    <string name="open_link_by_internal_browser_summary">开启后，通过内置浏览器打开非河畔链接</string>
    <string name="ignore_ssl_verifier">ignore_ssl_verifier</string>
    <string name="ignore_ssl_verifier_title">忽略证书过期（重启生效）</string>
    <string name="ignore_ssl_verifier_summary">当河畔证书过期时，打开此开关以正常浏览</string>
    <string name="refresh_on_reply_success">refresh_on_reply_success</string>
    <string name="refresh_on_reply_success_title">评论成功后自动刷新帖子</string>
    <string name="refresh_on_reply_success_summary">评论成功后自动刷新帖子以查看发表的评论</string>
    <string name="page_size">page_size</string>
    <string name="page_size_title">每页数据大小</string>
    <string name="page_size_summary">设置帖子列表、评论等数据的每页数据数（若出现连接超时的情况，建议调至最小）</string>
    <string name="theme_follow_wallpaper">theme_follow_wallpaper</string>
    <string name="theme_follow_wallpaper_title">应用主题跟随壁纸（重启生效）</string>
    <string name="theme_follow_wallpaper_summary">安卓12及以上系统有效</string>
    <string name="post_detail_new_style">post_detail_new_style</string>
    <string name="post_detail_new_style_title">新版帖子详情样式</string>
    <string name="post_detail_new_style_summary">(开发中，敬请期待)打开以切换新版帖子详情样式</string>
    <string name="show_imgs_at_top_list">show_imgs_at_top_list</string>
    <string name="show_imgs_at_top_list_title">加载帖子列表时同时加载帖子里图片并显示</string>
    <string name="show_imgs_at_top_list_summary">开启后，请注意移动网络下的流量消耗</string>
    <string name="ui_mode_follow_system">ui_mode_follow_system</string>
    <string name="ui_mode_follow_system_title">日夜模式跟随系统</string>
    <string name="ui_mode_follow_system_summary"></string>
    <string name="show_home_banner">show_home_banner</string>
    <string name="show_home_banner_title">显示首页轮播图</string>
    <string name="show_home_banner_summary">打开此开关以显示首页顶部轮播图</string>
    <string name="close_all_site_top_stick_post">close_all_site_top_stick_post</string>
    <string name="close_all_site_top_stick_post_title">关闭首页河畔置顶公告</string>
    <string name="close_all_site_top_stick_post_summary">关闭后，你可能无法及时获取最新河畔资讯</string>
    <string name="show_all_img_at_tail">show_all_img_at_tail</string>
    <string name="show_all_img_at_tail_title">图片显示在帖子末尾</string>
    <string name="show_all_img_at_tail_summary">将帖子里的全部图片显示在末尾，获得最佳图片显示效果，但是对于图文混排的帖子不太友好</string>
    <string name="hot_comment_zan_threshold">hot_comment_zan_threshold</string>
    <string name="hot_comment_zan_threshold_title">热门评论点赞数阈值</string>
    <string name="hot_comment_zan_threshold_summary">当评论的点赞数大于等于这个阈值时，该评论会出现在热门评论里</string>
    <string name="board_list_columns">board_list_columns</string>
    <string name="board_list_columns_title">板块列表显示列数</string>
    <string name="board_list_columns_summary">更改此项获得最佳板块列表显示效果</string>
    <string name="upload_hash">upload_hash</string>
    <string name="upload_hash_title">获取Hash参数值</string>
    <string name="upload_hash_summary">上传附件需要用到Hash参数，点击立即获取参数值</string>
    <string name="hide_anonymous_post">hide_anonymous_post</string>
    <string name="hide_anonymous_post_title">对匿名BUG进行处理</string>
    <string name="hide_anonymous_post_summary">由于河畔匿名bug，在手机端仍然可以看出匿名用户的真实id，打开此开关对这类帖子进行匿名处理（该设置只在本客户端有效，其它客户端请咨询相应开发者）</string>
    <string name="app_theme">app_theme</string>
    <string name="app_theme_title">应用主题</string>
    <string name="app_theme_summary">更改应用内的强调色</string>
    <string name="app_about">app_about</string>
    <string name="app_about_title">关于</string>
    <string name="app_about_summary">应用信息、开源信息、反馈问题等</string>
    <string name="app_update">app_update</string>
    <string name="app_update_title">检查更新</string>
    <string name="app_update_summary">当前版本：</string>
    <string name="app_suggestion_contact_developer">app_suggestion_contact_developer</string>
    <string name="app_suggestion_contact_developer_title">站内私信作者</string>
    <string name="app_suggestion_contact_developer_summary">直接与我联系，需要登录</string>
    <string name="app_suggestion_contact_web">app_suggestion_contact_web</string>
    <string name="app_suggestion_contact_web_title">网页端反馈</string>
    <string name="app_suggestion_contact_web_summary">匿名反馈，你或许可以在这里找到相关内容</string>
    <string name="app_suggestion_contact_mail">app_suggestion_contact_mail</string>
    <string name="app_suggestion_contact_mail_title">邮件反馈</string>
    <string name="app_suggestion_contact_mail_summary">反馈遇到的Bug，或者提出意见</string>
    <string name="clear_cache">clear_cache</string>
    <string name="clear_cache_title">清理缓存</string>
    <string name="clear_cache_summary">清理应用的图片缓存等缓存数据</string>
    <string name="clear_cache_disp">确定要清除缓存吗？缓存数据包括：图片缓存数据、发表评论和帖子时压缩的图片和下载的更新安装包等。清理后建议重启软件\n当前缓存大小为：%1$s</string>
    <string name="about_developer">about_developer</string>
    <string name="about_developer_title">河畔帐号</string>
    <string name="about_developer_summary">sca_tl</string>
    <string name="about_developer_mail">about_developer_mail</string>
    <string name="about_developer_mail_title">邮箱反馈</string>
    <string name="about_developer_mail_summary">点击发送邮件：sca_tl@foxmail.com</string>
    <string name="about_source_code">about_source_code</string>
    <string name="about_source_code_title">源代码</string>
    <string name="about_source_code_summary">点击查看本项目源码</string>
    <string name="about_open_source">about_open_source</string>
    <string name="about_open_source_title">开源许可</string>
    <string name="about_open_source_summary">点击查看本应用用到的开源项目</string>
    <string name="download_folder_uri">download_folder_uri</string>
    <string name="download_file_name">download_file_name</string>
    <string name="download_file_url">download_file_url</string>
    <string name="post_draft_warning">本草稿箱内容只保存在本地，与您的清水河畔帐户的草稿箱内容没有任何关系，
        卸载软件、清除软件数据均会造成草稿箱内容丢失，请在执行这些操作前做好备份！</string>
    <string name="suggestion_privacy_note">隐私声明：反馈功能仅会上传你的反馈内容，这表示反馈是匿名的。并且反馈会被公开。</string>
    <string name="suggestion_privacy_anonymous">注意：由于您没有登陆，因此该条反馈是匿名的，并且您无法再查看这条反馈</string>
    <string name="download_emoticon">您还没有下载表情包，快去下载吧（我的->表情管理）</string>
</resources>