<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

<!--    <PreferenceCategory-->
<!--        android:title="帐号"-->
<!--        app:allowDividerAbove="false">-->

<!--        <Preference-->
<!--            android:key="@string/upload_hash"-->
<!--            android:title="@string/upload_hash_title"-->
<!--            android:summary="@string/upload_hash_summary">-->

<!--        </Preference>-->


<!--    </PreferenceCategory>-->

    <PreferenceCategory
        android:title="显示"
        app:allowDividerAbove="false">

        <SwitchPreferenceCompat
            android:key="@string/ui_mode_follow_system"
            android:title="@string/ui_mode_follow_system_title"
            android:summary="@string/ui_mode_follow_system_summary"
            android:defaultValue="false">

        </SwitchPreferenceCompat>

        <SeekBarPreference
            android:defaultValue="3"
            android:max="5"
            app:min="1"
            app:showSeekBarValue="true"
            android:key="@string/board_list_columns"
            android:title="@string/board_list_columns_title"
            android:summary="@string/board_list_columns_summary">
        </SeekBarPreference>


    </PreferenceCategory>

    <PreferenceCategory
        android:title="浏览"
        app:allowDividerAbove="false">

<!--        <ListPreference-->
<!--            android:key="@string/home_style"-->
<!--            android:title="@string/home_style_title"-->
<!--            android:summary="@string/home_style_summary"-->
<!--            android:entries="@array/home_style_entries"-->
<!--            android:entryValues="@array/home_style_values"-->
<!--            android:defaultValue="0">-->
<!--        </ListPreference>-->

        <SwitchPreferenceCompat
            android:key="@string/auto_load_more"
            android:title="@string/auto_load_more_title"
            android:summary="@string/auto_load_more_summary"
            android:defaultValue="true">

        </SwitchPreferenceCompat>

        <SeekBarPreference
            android:defaultValue="25"
            android:max="50"
            app:min="5"
            app:showSeekBarValue="true"
            android:key="@string/page_size"
            android:title="@string/page_size_title"
            android:summary="@string/page_size_summary">
        </SeekBarPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="其它"
        app:allowDividerAbove="false">

        <Preference
            android:key="@string/app_update"
            android:title="@string/app_update_title"
            app:summary="@string/app_update_summary">

        </Preference>

        <Preference
            android:key="@string/clear_cache"
            android:title="@string/clear_cache_title"
            app:summary="@string/clear_cache_summary">

        </Preference>

        <Preference
            android:key="@string/app_about"
            android:title="@string/app_about_title"
            app:summary="@string/app_about_summary">

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="反馈"
        app:allowDividerAbove="false">

        <Preference
            android:key="@string/app_suggestion_contact_web"
            android:title="@string/app_suggestion_contact_web_title"
            app:summary="@string/app_suggestion_contact_web_summary">

        </Preference>


        <Preference
            android:key="@string/app_suggestion_contact_developer"
            android:title="@string/app_suggestion_contact_developer_title"
            app:summary="@string/app_suggestion_contact_developer_summary">

        </Preference>


    </PreferenceCategory>

</PreferenceScreen>