<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <PreferenceCategory
        android:title="作者">

        <Preference
            android:key="@string/about_developer"
            android:title="@string/about_developer_title"
            android:summary="@string/about_developer_summary">
        </Preference>

        <Preference
            android:key="@string/about_developer_mail"
            android:title="@string/about_developer_mail_title"
            android:summary="@string/about_developer_mail_summary">
        </Preference>


    </PreferenceCategory>

    <PreferenceCategory
        android:title="开源"
        app:allowDividerAbove="false">

        <Preference
            android:key="@string/about_source_code"
            android:title="@string/about_source_code_title"
            app:summary="@string/about_source_code_summary">
        </Preference>

        <Preference
            android:key="@string/about_open_source"
            android:title="@string/about_open_source_title"
            app:summary="@string/about_open_source_summary">
        </Preference>



    </PreferenceCategory>

</PreferenceScreen>