<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.account.view.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimary"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/bottom_fragment_login_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|bottom"
                android:singleLine="true"
                android:maxLines="1"
                android:hint="@string/user_name"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til2"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/bottom_fragment_login_user_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|bottom"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/user_psw"
                android:inputType="textPassword"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/bottom_fragment_login_dsp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/bottom_fragment_login_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#90ff0000"
            android:textSize="17sp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:maxLines="3"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/bottom_fragment_login_register_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bottom_fragment_login_register_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:text="@string/register_text"
                    android:textColor="#fff"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/shape_common_btn"
                    style="?android:attr/borderlessButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bottom_fragment_login_login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:text="@string/login_text"
                    android:textColor="#fff"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/shape_common_btn"
                    style="?android:attr/borderlessButtonStyle"/>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>