<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="添加账号"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:textColor="?attr/colorPrimary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|bottom"
            android:singleLine="true"
            android:maxLines="1"
            android:hint="@string/user_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_psw_layout"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="?attr/colorPrimary"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/user_name_layout"
        app:layout_goneMarginTop="15dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|bottom"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/user_psw"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/rule_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_psw_layout"
        android:layout_marginTop="10dp"
        android:minWidth="0dp"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/rule_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈"
        app:layout_constraintTop_toTopOf="@id/rule_checkbox"
        app:layout_constraintBottom_toBottomOf="@id/rule_checkbox"
        app:layout_constraintStart_toEndOf="@id/rule_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_account_text"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rule_checkbox"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        app:layout_goneMarginTop="30dp"
        style="@style/Widget.Material3.Button.UnelevatedButton" />

</androidx.constraintlayout.widget.ConstraintLayout>